src/objects/WorkflowValues_for_Insert_Record__c.object
<CustomObject>
    <description>Captures the values  for the Insert  Related Record Action</description>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value to be populated on field</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule_Action__c</fullName>
        <label>Workflow Rule Action</label>
        <referenceTo>WorkflowRuleAction__c</referenceTo>
        <relationshipName>Values_for_Action_Insert_Record</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workflow Values for Action Insert Record</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Values for Action Insert Record</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>